* CHANGES IN dplR VERSION 1.7.7

File: rwl.report.R
----------------

- Added in years with all zeros in the report. And a warning that it can break dplR.

File: ssf.R
----------------

- Found a bug where input data with rows of all zero caused div0 problems. Added a check to stop program if input has all zero rows.

* CHANGES IN dplR VERSION 1.7.6

File: caps.R
----------------

- Added a % option to the spline so that values of nyrs between 0 and 1 are a percentage of the length of y.
- Changed the default otion for nyrs to a 2/3 spline

* CHANGES IN dplR VERSION 1.7.5

File: read.compact.Rd
----------------

- Added an example.

File: read.compact.c
----------------

- warning on # of args in two spots. Looked at it after email from Kurt H

File: detrend.series.Rd
----------------

- missing \ in man page

File: adsf.f95 and capsf.f95
----------------

- Replaced DFLOAT with DBLE as per BDR's reasonable demand.

File: ssf
----------------

- Changed output to be class(crn) for list with long output

File: chron.ci
----------------

- Changed output to be class(crn)

File: crn.plot and plot.crn
----------------

- Finally reconciled the misnaming of crn.plot vs plot.crn etc. The new default plot method is simpler and cleaner. Help pages updated and a warning crn.plot is called directly.

File: chron.stabilized
----------------

- Added class crn to returned value as per github issue #18

File: read.fh
----------------

- Ron Visser added a BC correction to the function.

File: read.rwl
----------------

- Edited function to look for commas (",") in lower blocks of data as opposed to the header

File: csv2rwl
----------------

- Added a stop error and message when there are duplicate series IDs

File: read.tucson
----------------

- Changed error message when there are duplicate series IDs to be more informative

File: normalize1
----------------
