@@ -1,3 +1,7 @@
+o [andybunn] write a generic rwl check -- see common.interval for a start
+
+o [andybunn] look at rwl.report for problem children like cana209.fname <- "https://www.ncei.noaa.gov/pub/data/paleo/treering/measurements/northamerica/canada/cana209.rwl"
+
 o [andybunn] multiple RCS
 
 o [andybunn]  reader for *-rwl-noaa.txt
